@@ -15,6 +15,7 @@ NEWS
   * [ssl] add option to honor server cipher order (fixes #2364, BEAST attack)
   * [core] accept dots in ipv6 addresses in host header (fixes #2359)
   * [ssl] fix ssl connection aborts if files are larger than the MAX_WRITE_LIMIT (256kb)
+  * [libev/cgi] fix waitpid ECHILD errors in cgi with libev (fixes #2324)
 
 - 1.4.29 - 2011-07-03
   * Fix mod_proxy waiting for response even if content-length is 0 (fixes #2259)
